Modificata l'avventura nella Costa della Spada

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./Immagini/Balderich Battlehammer.jpg
-./Immagini/Dorian Stoneheart.png
-./Immagini/Elianne Daggerford.png
-./Immagini/Lady Valanthe Myritar.jpg
-./Immagini/Waterbaron Nestor Ruthiol.png
+Immagini/Balderich Battlehammer.jpg
+Immagini/Dorian Stoneheart.png
+Immagini/Elianne Daggerford.png
+Immagini/Lady Valanthe Myritar.jpg
+Immagini/Waterbaron Nestor Ruthiol.png
