Modificata l'avventura nella Costa della Spada

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Immagini/Dorian Stoneheart.png
 Immagini/Elianne Daggerford.png
 Immagini/Lady Valanthe Myritar.jpg
 Immagini/Waterbaron Nestor Ruthiol.png
+Immagini/Credence.png
