Fine riassunto della Campagna 0 - La scaglia del drago

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-Immagini/Balderich Battlehammer.jpg
-Immagini/Dorian Stoneheart.png
-Immagini/Elianne Daggerford.png
-Immagini/Lady Valanthe Myritar.jpg
-Immagini/Waterbaron Nestor Ruthiol.png
-Immagini/Credence.png
+NPCs_non_conosciuti/
